Fix rendering issues on mobile

--- a/MihuBot/Components/Layout/MainLayout.razor.css
+++ b/MihuBot/Components/Layout/MainLayout.razor.css
@@ -6,7 +6,12 @@
 
 main {
     flex: 1;
-    max-width: calc(100% - 240px)
+}
+
+@media (min-width: 641px) {
+    main {
+        max-width: calc(100% - 240px);
+    }
 }
 
 .sidebar {
